--- a/docker.compose.dev.yml
+++ b/docker.compose.dev.yml
@@ -11,6 +11,11 @@ services:
       env_file: .env.geospatial.tracking
       environment:
            - TZ=Asia/Jakarta
+           # elastic apm config
+           - ELASTIC_APM_SERVICE_NAME="geospatial-tracking"
+           - ELASTIC_APM_LOG_LEVEL=DEBUG
+           - ELASTIC_APM_ENVIRONMENT=development
+           - ELASTIC_APM_SERVER_URL="http://51.79.155.191:8200"
       ports:
           - "1112:1112"
       dns:
